# rs-cellular-automata

./: .gitignore  Cargo.toml  README.md  TODO.txt  perf.txt
automata-cli/: Cargo.toml
automata-cli/src/: main.rs
automata-gtk/: Cargo.toml
automata-gtk/src/: main.rs
automata-lib/: Cargo.toml
automata-lib/src/: automata.rs
automata-wasm/: Cargo.toml
automata-wasm/src/: lib.rs
automata-wasm/www/: index.html  index.js  package-lock.json  package.json
src/: automata.rs  lib.rs  rules.rs
